<resources>
    <!-- Main Activity-->

    <string name="app_name">718调试助手</string>
    <string name="title_name">718调试助手</string>
    <string name="button1_name">蓝牙连接</string>
    <string name="button2_name">串口助手</string>
    <string name="button3_name">智能车遥控器</string>
    <string name="button4_name">关于</string>

    <!-- Bluetooth Activity-->
    <string name="switch_name">打开蓝牙</string>
    <string name="device_name">已连接设备</string>
    <string name="available_device">已绑定设备</string>

    <!-- Serial Activity-->
    <string name="receive_name">接收区</string>
    <string name="send_name">发送区</string>
    <string name="clear_receive">清空接收区</string>
    <string name="clear_send">清空发送区</string>
    <string name="send">发送</string>

    <!-- Control Activity-->
    <string name="fun_button1">功能键1</string>
    <string name="fun_button2">功能键2</string>
    <string name="fun_button3">功能键3</string>
    <string name="fun_button4">功能键4</string>
    <string name="fun_button5">功能键5</string>
    <string name="fun_button6">功能键6</string>
    <string name="x_speed">转向速度</string>
    <string name="y_speed">前进速度</string>
    <string name="default_speed">0</string>
    <!-- Change name dialog-->
    <string name="dialog_title">修改按键名称</string>
    <string name="dialog_label">按键名称</string>

    <!-- About Activity-->
    <string name="about_title">关于</string>
    <string name="about_info">
        <b>718调试助手\n</b>
        <b>版本1.2.0\n</b>
        <b>CopyRight©2018 718创新实验室\n</b>
        <b>All rights reserved.\n</b>
    </string>

</resources>
