<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/fun_button1"
        app:layout_constraintEnd_toStartOf="@+id/space5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/receive_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receive_name" />

        <TextView
            android:id="@+id/con_receive_text"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:background="@drawable/border"
            android:singleLine="false"
            android:text="" />

    </LinearLayout>

    <Button
        android:id="@+id/fun_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fun_button1"
        app:layout_constraintBottom_toTopOf="@+id/fun_button4"
        app:layout_constraintEnd_toEndOf="@+id/fun_button3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/fun_button3"
        app:layout_constraintTop_toTopOf="@+id/fun_button2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/fun_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fun_button2"
        app:layout_constraintBottom_toTopOf="@+id/fun_button4"
        app:layout_constraintEnd_toEndOf="@+id/fun_button4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/fun_button4" />

    <Button
        android:id="@+id/fun_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fun_button3"
        app:layout_constraintEnd_toEndOf="@+id/fun_button5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/fun_button5"
        app:layout_constraintTop_toBottomOf="@+id/fun_button1" />

    <Button
        android:id="@+id/fun_button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fun_button4"
        app:layout_constraintBottom_toTopOf="@+id/fun_button6"
        app:layout_constraintEnd_toEndOf="@+id/fun_button6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/fun_button6" />

    <Button
        android:id="@+id/fun_button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/fun_button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fun_button3" />

    <Button
        android:id="@+id/fun_button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fun_button6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fun_button5" />

    <TextView
        android:id="@+id/x_view"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/x_speed"
        app:layout_constraintBottom_toBottomOf="@+id/x_edit"
        app:layout_constraintEnd_toStartOf="@+id/x_edit"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/x_edit"
        app:layout_constraintVertical_bias="0.518" />

    <TextView
        android:id="@+id/x_edit"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:text="@string/default_speed"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/x_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/y_view"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/y_speed"
        app:layout_constraintBottom_toBottomOf="@+id/y_edit"
        app:layout_constraintEnd_toStartOf="@+id/x_edit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/y_edit"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/y_edit"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:text="@string/default_speed"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/y_view"
        app:layout_constraintTop_toBottomOf="@+id/x_edit" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="296dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/joystick"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/space5" />

    <Space
        android:id="@+id/space5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/y_edit" />


</android.support.constraint.ConstraintLayout>