<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/receive_view"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="17dp"
        android:text="@string/receive_name"
        app:layout_constraintBottom_toTopOf="@+id/receive_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/receive_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/border"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:fadeScrollbars="false"
        app:layout_constraintBottom_toTopOf="@+id/send_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receive_view" />

    <TextView
        android:id="@+id/send_view"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="18dp"
        android:text="@string/send_name"
        app:layout_constraintBottom_toTopOf="@+id/send_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receive_text" />

    <EditText
        android:id="@+id/send_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="top"
        android:minLines="5"
        app:layout_constraintBottom_toTopOf="@+id/cls_receive_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_view" />

    <Button
        android:id="@+id/cls_send_but"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/clear_send"
        app:layout_constraintBottom_toBottomOf="@+id/cls_receive_but"
        app:layout_constraintEnd_toStartOf="@+id/send_button"
        app:layout_constraintStart_toEndOf="@+id/cls_receive_but"
        app:layout_constraintTop_toTopOf="@+id/cls_receive_but" />

    <Button
        android:id="@+id/cls_receive_but"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="17dp"
        android:text="@string/clear_receive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cls_send_but"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_text" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="@+id/cls_send_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cls_send_but"
        app:layout_constraintTop_toTopOf="@+id/cls_send_but" />

</android.support.constraint.ConstraintLayout>